# javacardsign

./: .gitignore  .gitmodules  EDLMiniDriver.sln
EDLInstaller/: EDLInstaller.csproj
EDLMiniDriver/: EDLMiniDriver.h  EDLMiniDriver.rc  EDLMiniDriver.vcproj  edlminidriver.reg  notimplemented.cpp  stdafx.h
EDLRegister/: MainForm.cs  Program.cs  RegisterException.cs
EDLRegister/Properties/: AssemblyInfo.cs  Resources.Designer.cs
RegisterEDL/: RegisterEDL.cpp  RegisterEDL.vcproj  stdafx.cpp
cardlib/: CTAPIManager.cpp  DynamicLibrary.h  EstEidCard.h  EstEidCardMaintainer.h  SCError.cpp  SCError.h  SIMCard.h  common.h  mkdocs.sh  premake.lua
pkiapplet/: .classpath  .jcop  .project  build.xml  javacard.properties  reinstall.sh
pkihostapi/: .classpath  .project  Manifest.mf  README.txt  makedist.sh  pkihost.jardesc
pkihostapi/doc/: pkidoc.tex
win32/: LICENSE.txt  README.txt
win32/EDLInstaller/: CustomInstaller.cs
win32/EDLInstaller/Properties/: AssemblyInfo.cs
win32/EDLMiniDriver/: EDLMiniDriver.aps  EDLMiniDriver.cpp  EDLMiniDriver.def  ReadMe.txt  extra.manifest  resource.h  stdafx.cpp  version.h
win32/EDLRegister/: EDLRegister.csproj  MainForm.Designer.cs  MainForm.resx  RegisterCertificate.cs
win32/EDLSetup/: EDLSetup.vdproj
win32/RegisterEDL/: ReadMe.txt  stdafx.h
win32/cardlib/: CTAPIManager.h  CardBase.cpp  CardBase.h  Doxyfile  DynamicLibrary.cpp  EDLCard.cpp  EDLCard.h  EstEidCard.cpp  EstEidCardMaintainer.cpp  Makefile.am  ManagerInterface.h  PCSCManager.cpp  PCSCManager.h  SmartCardManager.cpp  SmartCardManager.h  helperMacro.h
(+50 files in other folders)
